{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "player1",
            "id": "fc2b9fd4-3a10-4685-8ef3-7d3d722ad9f7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cb69b34e-bf54-4ebd-9706-d904236a8616",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "11563109-0b2c-40c0-abc7-cb8b0737ee10",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "71d6aa44-e03b-48a3-90d7-9f90fe2b59f1",
                    "path": "<HID::Joy-Con (L)>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4a2d7a59-e2c5-4d11-9db8-c173cbe72117",
                    "path": "<HID::Joy-Con (L)>/button11",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b616ca6e-7282-4070-b7de-1418c37afa31",
                    "path": "<HID::Joy-Con (L)>/button0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "421a2fba-dfb9-4da2-a26c-a8f62b890261",
                    "path": "<HID::Joy-Con (L)>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}